--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15611,5 +15611,59 @@ ul {
 .course-content-body .assignment-calendar-item {
   border-bottom: solid 1px #707070;
   padding: 2vh 2vw;
+  display: flex;
+}
+
+.course-content-body .assignment-calendar-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 4vw;
+  width: 100%;
+}
+
+.course-content-body .assignment-calendar-content-title {
+  margin: 0;
+}
+
+.course-content-body .assignment-calendar-content .non-done {
+  border: solid 2px #B7B7B7;
+  color: #B7B7B7;
+  border-radius: 50%;
+  padding: 1vw;
+}
+
+.course-content-body .assignment-calendar-content .done {
+  border: solid 2px #B7B7B7;
+  background-color: #B7B7B7;
+  border-radius: 50%;
+  color: #fff;
+  padding: 1vw;
+}
+
+.assignment-modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: #eee;
+}
+
+.assignment-modal-body {
+  position: absolute;
+  width: 90%;
+  height: 70%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+}
+
+.assignment-modal-close {
+  position: absolute;
+  top: 4vh;
+  right: 6vw;
 }
 
