--- a/resources/sass/modules/_course.scss
+++ b/resources/sass/modules/_course.scss
@@ -112,7 +112,58 @@
             &-item{
                 border-bottom: solid 1px #707070;
                 padding: 2vh 2vw;
+                display: flex;
+            }
+
+            &-content{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-left: 4vw;
+                width: 100%;
+
+                &-title{
+                    margin: 0;
+                }
+                .non-done{
+                    border: solid 2px #B7B7B7;
+                    color: #B7B7B7;
+                    border-radius: 50%;
+                    padding: 1vw;
+                }
+                .done{
+                    border: solid 2px #B7B7B7;
+                    background-color: #B7B7B7;
+                    border-radius: 50%;
+                    color: #fff;
+                    padding: 1vw;
+                }
             }
         }
+    }
+}
+.assignment-modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    //transform: translate(-50%, -50%);
+    z-index: 100;
+    background-color: #eee;
+
+    &-body{
+        position: absolute;
+        width: 90%;
+        height: 70%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+    }
+    &-close{
+        position: absolute;
+        top: 4vh;
+        right: 6vw;
     }
 }
