--- a/resources/sass/modules/_course.scss
+++ b/resources/sass/modules/_course.scss
@@ -9,6 +9,12 @@
 
         &-panel{
             text-align: center;
+
+            span.current{
+                background-color: #BBDEFF;
+                border-radius: 50%;
+                padding: 0 1vw;
+            }
         }
     }
 
@@ -26,17 +32,21 @@
         word-break: break-word;
 
         &-card{
-            padding: 1vw;
+            padding: 4vw 0.5vw;
             position: relative;
+            height: 100%;
+            border: solid 1px #707070;
+            border-radius: 5px;
+            background: #fff;
         }
         &-name{
             text-align: center;
             font-size: .8rem;
             margin: 0;
         }
-        &-color-lavel{
+        &-color-label{
             position: absolute;
-            top: -15%;
+            top: 7%;
             left: 0;
             width: 80%;
             height: 10px;
@@ -105,7 +115,7 @@
         color: #707070;
 
         .assignment-calendar{
-            height: 45vh;
+            height: 80vh;
             overflow: scroll;
             margin-bottom: 0;
             
@@ -113,6 +123,13 @@
                 border-bottom: solid 1px #707070;
                 padding: 2vh 2vw;
                 display: flex;
+
+                .next{
+                    background-color: #BBDEFF;
+                    border-radius: 50%;
+                    padding: 1vh 1vw;
+                    margin: -1vh -1vw;
+                }
             }
 
             &-content{
@@ -160,10 +177,31 @@
         left: 50%;
         transform: translate(-50%, -50%);
         background-color: #fff;
+        padding: 5vw;
+
+        &-memo-container{
+            border-top: solid 1px #707070;
+            border-bottom: solid 2px #707070;
+            margin-bottom: 2vh;
+            padding: 2vh 0;
+        }
+        &-memo-title{
+            font-size: .5rem;
+            color: #888282;
+            font-weight: normal;
+        }
     }
     &-close{
         position: absolute;
         top: 4vh;
         right: 6vw;
+    }
+    
+    .btn-modal{
+        flex: 1;
+        margin: 1vh 1vw;
+        font-size: 0.5rem;
+        padding: 0.5vh 0;
+        color: #fff;
     }
 }
