--- a/resources/sass/settings/_normalize.scss
+++ b/resources/sass/settings/_normalize.scss
@@ -5,3 +5,16 @@ ul{
     list-style: none;
     padding: 0;
 }
+a{
+    color: #2b2b2b;
+    text-decoration: none;
+}
+a:hover{
+    color: #2b2b2b;
+    text-decoration: none;
+}
+
+.radio-title{
+    font-size: .5rem;
+    margin-bottom: 0;
+}
