--- a/resources/sass/modules/_header.scss
+++ b/resources/sass/modules/_header.scss
@@ -2,6 +2,7 @@
     background-color: #919191;
     position: relative;
     display: block;
+    min-height: 6vh;
 
     &-button-icon{
         color: #fff;
