--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15507,6 +15507,10 @@ a:hover {
   color: white !important;
 }
 
+.i-normal {
+  color: #919191;
+}
+
 .course {
   width: 90%;
   margin: 2vw auto;
@@ -15908,6 +15912,18 @@ a:hover {
   padding-left: 0.5vw;
 }
 
+.calendar-item-event {
+  font-size: 0.6rem;
+  white-space: nowrap;
+}
+
+.calendar-item-event span {
+  display: inline-block;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 50%;
+}
+
 .calendar-day {
   height: calc(82vh / 5);
 }
@@ -15963,7 +15979,7 @@ a:hover {
 .calendar-add-modal-inner {
   position: absolute;
   width: 96%;
-  height: 35%;
+  height: 36.5%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -16000,6 +16016,33 @@ a:hover {
   transform: translate(0, 0);
 }
 
+.calendar-add-modal-inner-color .color-title {
+  display: flex;
+  align-items: center;
+}
+
+.calendar-add-modal-inner-color .color-area {
+  display: flex;
+  width: 40%;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-around;
+}
+
+.calendar-add-modal-inner-color .color-area .color-circle {
+  width: 10vw;
+  height: 10vw;
+  border-radius: 50%;
+}
+
+.calendar-add-modal-inner-color .color-area .color-circle[aria-checked=true] {
+  border: solid 2px #707070;
+}
+
+.calendar-add-modal-inner-color .color-area .color-circle-input {
+  visibility: hidden;
+}
+
 .calendar-add-modal-inner-head {
   justify-content: space-around;
   align-items: center;
@@ -16014,19 +16057,27 @@ a:hover {
   border-bottom: solid 1px #707070;
 }
 
+.calendar-add-modal-inner-block:first-child {
+  border-bottom: solid 1px #707070;
+}
+
 .calendar-add-modal-inner-form {
   background-color: transparent;
   border: none;
 }
 
 .calendar-add-modal-inner-icon {
-  flex: 1;
+  width: 7vw;
   margin-left: 5vw;
   font-size: 1.6rem;
   margin-right: 3vw;
   display: flex;
   align-items: flex-start;
   justify-content: center;
+}
+
+.calendar-add-modal-inner-icon img {
+  width: 100%;
 }
 
 .calendar-add-modal-inner .color-icon {
@@ -16078,10 +16129,13 @@ a:hover {
   margin-right: 1.5vw;
 }
 
-.calendar-checked-item {
+.calendar-detail-item {
   padding: 2vw;
   border-radius: 5px;
   position: relative;
+}
+
+.calendar-checked-item {
   color: #fff;
 }
 
@@ -16103,6 +16157,42 @@ a:hover {
 .calendar-checked-item-memo {
   font-size: 0.8rem;
   margin-bottom: 1vh;
+}
+
+.calendar-event-item {
+  border: solid 1px #707070;
+  margin-bottom: 1vh;
+}
+
+.calendar-event-item-title {
+  font-size: 0.8rem;
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.calendar-event-item-title span {
+  display: inline-block;
+  width: 3vw;
+  height: 3vw;
+  border-radius: 50%;
+  margin-right: 1vw;
+}
+
+.calendar-event-item-text {
+  font-size: 0.6rem;
+  margin-bottom: 0;
+}
+
+.calendar-event-item-icon {
+  width: 4vw;
+}
+
+.calendar-event-item-edit {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  transform: translate(0, -50%);
 }
 
 .el-switch.is-checked .el-switch__core {
