enabled change course color

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,3 +14,5 @@
 @import './modules/setting-style';
 @import './modules/calendar';
 @import './modules/delete-modal';
+@import './modules//modal';
+@import './modules/color-lists';
