--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,17 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+$main-color: #919191;
+$border-color: #707070;
+$light-color: #F0F0F0;
+$text-color: #888282;
+$off-white: #f8f8f8;
+$black: #2b2b2b;
+$current-blue: #BBDEFF;
+
+$icon-purple: #B6ABE4;
+$icon-pink: #B5179D;
+$icon-skyblue: #ABC9E3;
+$icon-yellow: #F2EFAC;
+$icon-lightgreen: #B8EDE1;
