--- a/resources/sass/modules/_course.scss
+++ b/resources/sass/modules/_course.scss
@@ -1,7 +1,7 @@
 .course{
     width: 90%;
     margin: 2vw auto;
-    color: #928d8c;
+    color: $text-color;
 
     &-day-head{
         font-size: 1rem;
@@ -11,7 +11,7 @@
             text-align: center;
 
             span.current{
-                background-color: #BBDEFF;
+                background-color: $current-blue;
                 border-radius: 50%;
                 padding: 0 1vw;
             }
@@ -25,8 +25,8 @@
     }
 
     &-panel{
-        border: solid 1px #e2e2e2;
-        background-color: #f8f8f8;
+        border: solid 1px $light-color;
+        background-color: $off-white;
         height: calc(100vh / 7);
         width: calc(100% / 6);
         word-break: break-word;
@@ -35,7 +35,7 @@
             padding: 4vw 0.5vw;
             position: relative;
             height: 100%;
-            border: solid 1px #707070;
+            border: solid 1px $border-color;
             border-radius: 5px;
             background: #fff;
         }
@@ -65,7 +65,7 @@
             padding: 2vw;
             width: 96%;
             margin: 0 auto;
-            color: #707070;
+            color: $border-color;
 
             &-info{
                 position: relative;
@@ -86,7 +86,7 @@
                 }
             }
             &-title{
-                border-bottom: solid 2px #707070;
+                border-bottom: solid 2px $border-color;
                 margin-bottom: 2vh;
             }
             &-info-item{
@@ -112,7 +112,7 @@
         padding: 2vw;
         width: 96%;
         margin: 0 auto;
-        color: #707070;
+        color: $border-color;
 
         .assignment-calendar{
             height: 80vh;
@@ -120,12 +120,12 @@
             margin-bottom: 0;
             
             &-item{
-                border-bottom: solid 1px #707070;
+                border-bottom: solid 1px $border-color;
                 padding: 2vh 2vw;
                 display: flex;
 
                 .next{
-                    background-color: #BBDEFF;
+                    background-color: $current-blue;
                     border-radius: 50%;
                     padding: 1vh 1vw;
                     margin: -1vh -1vw;
@@ -165,7 +165,6 @@
     height: 100%;
     top: 0;
     left: 0;
-    //transform: translate(-50%, -50%);
     z-index: 100;
     background-color: #eee;
 
@@ -180,14 +179,14 @@
         padding: 5vw;
 
         &-memo-container{
-            border-top: solid 1px #707070;
-            border-bottom: solid 2px #707070;
+            border-top: solid 1px $border-color;
+            border-bottom: solid 2px $border-color;
             margin-bottom: 2vh;
             padding: 2vh 0;
         }
         &-memo-title{
             font-size: .5rem;
-            color: #888282;
+            color: $text-color;
             font-weight: normal;
         }
     }
