--- a/resources/sass/modules/_delete-modal.scss
+++ b/resources/sass/modules/_delete-modal.scss
@@ -6,7 +6,7 @@
     height: 100%;
     &::before{
         content: "";
-        background-color: #EDEDED;
+        background-color: $light-color;
         opacity: 0.7;
         position: absolute;
         top: 0;
@@ -23,7 +23,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    border: solid 1px #2b2b2b;
+    border: solid 1px $black;
     padding: 2vw;
     border-radius: 2px;
 }
