--- a/resources/sass/modules/_header.scss
+++ b/resources/sass/modules/_header.scss
@@ -1,5 +1,5 @@
 .navbar{
-    background-color: #919191;
+    background-color: $main-color;
     position: relative;
     display: block;
     min-height: 6vh;
@@ -22,7 +22,7 @@
         transform: translate(0, -50%);
     }
     &-hamburger-menu{
-        background-color: #919191;
+        background-color: $main-color;
         position: fixed;
         width: 80vw;
         height: 100%;
@@ -71,9 +71,9 @@
             }
 
             &.current{
-                background-color: #D2D2D2;
+                background-color: $light-color;
                 a{
-                    color: #707070;
+                    color: $border-color;
                 }
             }
         }
