--- a/resources/sass/modules/_setting-style.scss
+++ b/resources/sass/modules/_setting-style.scss
@@ -1,74 +1,90 @@
 .setting{
-    &-head{
-        background-color: $main-color;
-        color: #fff;
-        padding: 2vh 0;
-        position: relative;
+	&-head{
+		background-color: $main-color;
+		color: #fff;
+		padding: 2vh 0;
+		position: relative;
 
-        &-back{
-            position: absolute;
-            top: 40%;
-            left: 0;
-            color: #fff;
-        }
-        &-title{
-            margin: 0;
-            font-size: 1.6rem;
-            text-align: center;
-        }
-    }
+		&-back{
+			position: absolute;
+			top: 40%;
+			left: 0;
+			color: #fff;
+		}
+		&-title{
+			margin: 0;
+			font-size: 1.6rem;
+			text-align: center;
+		}
+	}
 }
 .setting-body{
-    background-color: $light-color;
+  background-color: $light-color;
 }
 .setting-subtitle{
-    color: $main-color;
-    font-size: 1.2rem;
-    padding-left: 2vw;
-    margin: 2vh 0;
+	color: $main-color;
+	font-size: 1.2rem;
+	padding: 2vh 0 2vh 2vw;
+	margin: 0;
 }
 .setting-list-container{
-    background-color: #fff;
-    border: solid 1px $text-color;
+	background-color: #fff;
+	border: solid 1px $text-color;
 }
 .setting-list{
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 .setting-list-icon{
-    display: block;
-    flex: 1;
-    text-align: center;
+	display: block;
+	flex: 1;
+	text-align: center;
+	color: $text-color;
 
-    img{
-        width: 60%;
-    }
+	img{
+		width: 60%;
+	}
 }
 .setting-list-icon-circle{
-    width: 7vw;
-    height: 7vw;
-    border-radius: 50%;
-    margin: 0 auto;
+	width: 7vw;
+	height: 7vw;
+	border-radius: 50%;
+	margin: 0 auto;
 }
 .setting-list-name{
-    flex: 8;
-    padding: 3vw 3vw 3vw 8vw;
-    color: $main-color;
+	flex: 8;
+	padding: 3vw 3vw 3vw 8vw;
+	color: $main-color;
+	margin: 0;
 
-    a{
-        color: $main-color;
-    }
+	a{
+		color: $main-color;
+	}
 }
 .setting-list-container  {
-    .setting-list:not(:last-child){
-        .setting-list-name{
-            border-bottom: solid 1px $text-color;
-        }
-    }
+	.setting-list:not(:last-child){
+		.setting-list-name{
+				border-bottom: solid 1px $text-color;
+		}
+	}
 }
 .setting-modal-confirm{
-    width: 40%;
-    margin: 2vh auto 0;
-    display: flex;
-    justify-content: space-around;
+	width: 40%;
+	margin: 2vh auto 0;
+	display: flex;
+	justify-content: space-around;
+}
+.setting-edit-block{
+	margin: 1vh 0;
+	display: flex;
+	justify-content: flex-end;
+}
+.setting-edit-block-inner{
+	width: 30%;
+	display: flex;
+	justify-content: space-around;
+}
+.setting-end-form{
+	display: flex;
+	align-items: center;
 }
