--- a/resources/sass/modules/_course.scss
+++ b/resources/sass/modules/_course.scss
@@ -1,206 +1,214 @@
 .course{
-    width: 90%;
-    margin: 2vw auto;
-    color: $text-color;
+	width: 90%;
+	margin: 2vw auto;
+	color: $text-color;
 
-    &-day-head{
-        font-size: 1rem;
-        font-weight: bold;
+	&-day-head{
+		font-size: 1rem;
+		font-weight: bold;
 
-        &-panel{
-            text-align: center;
+		&-panel{
+			text-align: center;
 
-            span.current{
-                background-color: $current-blue;
-                border-radius: 50%;
-                padding: 0 1vw;
-            }
-        }
-    }
+			span.current{
+				background-color: $current-blue;
+				border-radius: 50%;
+				padding: 0 1vw;
+			}
+		}
+	}
 
-    &-period-panel{
-        font-size: 1rem;
-        font-weight: bold;
-        text-align: center;
-    }
+	&-period-panel{
+		font-size: 1rem;
+		font-weight: bold;
+		text-align: center;
+	}
 
-    &-panel{
-        border: solid 1px $light-color;
-        background-color: $off-white;
-        height: calc(100vh / 7);
-        width: calc(100% / 6);
-        word-break: break-word;
+	&-panel{
+		border: solid 1px $light-color;
+		background-color: $off-white;
+		height: calc(100vh / 7);
+		width: calc(100% / 6);
+		word-break: break-word;
 
-        &-card{
-            padding: 4vw 0.5vw;
-            position: relative;
-            height: 100%;
-            border: solid 1px $border-color;
-            border-radius: 5px;
-            background: #fff;
-        }
-        &-name{
-            text-align: center;
-            font-size: .8rem;
-            margin: 0;
-        }
-        &-color-label{
-            position: absolute;
-            top: 7%;
-            left: 0;
-            width: 80%;
-            height: 10px;
-        }
-    }
+		&-card{
+			padding: 4vw 0.5vw;
+			position: relative;
+			height: 100%;
+			border: solid 1px $border-color;
+			border-radius: 5px;
+			background: #fff;
+		}
+		&-name{
+			text-align: center;
+			font-size: .8rem;
+			margin: 0;
+		}
+		&-color-label{
+			position: absolute;
+			top: 7%;
+			left: 0;
+			width: 80%;
+			height: 10px;
+		}
+	}
 
-    &-detail{
+	&-detail{
 
-        &-title{
-            text-align: center;
-            color: #fff;
-            padding: 4vh 0 2vh;
-            font-size: 1.6rem;
-        }
-        &-body{
-            padding: 2vw;
-            width: 96%;
-            margin: 0 auto;
-            color: $border-color;
+		&-title{
+			text-align: center;
+			color: #fff;
+			padding: 4vh 0 2vh;
+			font-size: 1.6rem;
+		}
+		&-body{
+			padding: 2vw;
+			width: 96%;
+			margin: 0 auto;
+			color: $border-color;
 
-            &-info{
-                position: relative;
+			&-info{
+				position: relative;
 
-                &-edit{
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    color: #fff;
-                }
-                &-cancel{
-                    position: absolute;
-                    top: 0;
-                    right: 60px;
-                }
-                &-select-flex{
-                    display: flex;
-                }
-            }
-            &-title{
-                border-bottom: solid 2px $border-color;
-                margin-bottom: 2vh;
-            }
-            &-info-item{
-                display: flex;
-                margin-bottom: 2vh;
-                align-items: flex-start;
+				&-edit{
+					position: absolute;
+					top: 0;
+					right: 0;
+					color: #fff;
+				}
+				&-cancel{
+					position: absolute;
+					top: 0;
+					right: 60px;
+				}
+				&-select-flex{
+					display: flex;
+				}
+			}
+			&-title{
+				border-bottom: solid 2px $border-color;
+				margin-bottom: 2vh;
+				position: relative;
+			}
+			&-info-item{
+				display: flex;
+				margin-bottom: 2vh;
+				align-items: flex-start;
 
-                img{
-                    width: 6%;
-                    margin-right: 4vw;
-                }
-            }
-            &-info-block{
-                display: flex;
-            }
-            &-text{
-                margin-bottom: 0;
-            }
-        }
-    }
+				img{
+					width: 6%;
+					margin-right: 4vw;
+				}
+			}
+			&-info-block{
+				display: flex;
+			}
+			&-text{
+				margin-bottom: 0;
+			}
+		}
+	}
 
-    &-content-body{
-        padding: 2vw;
-        width: 96%;
-        margin: 0 auto;
-        color: $border-color;
+	&-content-body{
+		padding: 2vw;
+		width: 96%;
+		margin: 0 auto;
+		color: $border-color;
 
-        .assignment-calendar{
-            height: 80vh;
-            overflow: auto;
-            margin-bottom: 0;
-            
-            &-item{
-                border-bottom: solid 1px $border-color;
-                padding: 2vh 2vw;
-                display: flex;
+		.assignment-calendar{
+			height: 80vh;
+			overflow: auto;
+			margin-bottom: 0;
+			
+			&-item{
+				border-bottom: solid 1px $border-color;
+				padding: 2vh 2vw;
+				display: flex;
 
-                .next{
-                    background-color: $current-blue;
-                    border-radius: 50%;
-                    padding: 1vh 1vw;
-                    margin: -1vh -1vw;
-                }
-            }
+				.next{
+					background-color: $current-blue;
+					border-radius: 50%;
+					padding: 1vh 1vw;
+					margin: -1vh -1vw;
+				}
+			}
 
-            &-content{
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-left: 4vw;
-                width: 100%;
+			&-content{
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				margin-left: 4vw;
+				width: 100%;
 
-                &-title{
-                    margin: 0;
-                }
-                .non-done{
-                    border: solid 2px #B7B7B7;
-                    color: #B7B7B7;
-                    border-radius: 50%;
-                    padding: 1vw;
-                }
-                .done{
-                    border: solid 2px #B7B7B7;
-                    background-color: #B7B7B7;
-                    border-radius: 50%;
-                    color: #fff;
-                    padding: 1vw;
-                }
-            }
-        }
-    }
+				&-title{
+					margin: 0;
+				}
+				.non-done{
+					border: solid 2px #B7B7B7;
+					color: #B7B7B7;
+					border-radius: 50%;
+					padding: 1vw;
+				}
+				.done{
+					border: solid 2px #B7B7B7;
+					background-color: #B7B7B7;
+					border-radius: 50%;
+					color: #fff;
+					padding: 1vw;
+				}
+			}
+		}
+	}
 }
 .assignment-modal{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    background-color: #eee;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	background-color: #eee;
 
-    &-body{
-        position: absolute;
-        width: 90%;
-        height: 70%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        padding: 5vw;
+	&-body{
+		position: absolute;
+		width: 90%;
+		height: 70%;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		background-color: #fff;
+		padding: 5vw;
 
-        &-memo-container{
-            border-top: solid 1px $border-color;
-            border-bottom: solid 2px $border-color;
-            margin-bottom: 2vh;
-            padding: 2vh 0;
-        }
-        &-memo-title{
-            font-size: .5rem;
-            color: $text-color;
-            font-weight: normal;
-        }
-    }
-    &-close{
-        position: absolute;
-        top: 4vh;
-        right: 6vw;
-    }
-    
-    .btn-modal{
-        flex: 1;
-        margin: 1vh 1vw;
-        font-size: 0.5rem;
-        padding: 0.5vh 0;
-        color: #fff;
-    }
+		&-memo-container{
+			border-top: solid 1px $border-color;
+			border-bottom: solid 2px $border-color;
+			margin-bottom: 2vh;
+			padding: 2vh 0;
+		}
+		&-memo-title{
+			font-size: .5rem;
+			color: $text-color;
+			font-weight: normal;
+		}
+	}
+	&-close{
+		position: absolute;
+		top: 4vh;
+		right: 6vw;
+	}
+	
+	.btn-modal{
+		flex: 1;
+		margin: 1vh 1vw;
+		font-size: 0.5rem;
+		padding: 0.5vh 0;
+		color: #fff;
+	}
+}
+.course-setting-button{
+	position: absolute;
+	top: 50%;
+	right: 3vw;
+	transform: translate(0, -50%);
+	color: $text-color;
 }
