特定の曜日の授業だけを取得できるようにapiを修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16209,6 +16209,10 @@ a:hover {
   border-bottom: solid 2px #707070;
 }
 
+.calendar-detail-info a {
+  color: #888282;
+}
+
 .calendar-detail-info-period {
   flex: 1;
   margin-bottom: 0;
