--- a/resources/sass/modules/_calendar.scss
+++ b/resources/sass/modules/_calendar.scss
@@ -206,6 +206,10 @@
         &-info{
             border-bottom: solid 2px $border-color;
 
+            a{
+                color: $text-color;
+            }
+
             &-period{
                 flex: 1;
                 margin-bottom: 0;
