--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15897,7 +15897,8 @@ a:hover {
 
 .setting-list-container {
   background-color: #fff;
-  border: solid 1px #888282;
+  border-top: solid 1px #888282;
+  border-bottom: solid 1px #888282;
 }
 
 .setting-list {
@@ -15913,7 +15914,7 @@ a:hover {
 }
 
 .setting-list-icon img {
-  width: 60%;
+  width: 50%;
 }
 
 .setting-list-icon-circle {
@@ -15980,6 +15981,10 @@ a:hover {
 .btn-password-reset {
   display: block;
   margin: 0 auto;
+}
+
+.mypage-body {
+  background-color: #fff;
 }
 
 .calendar {
@@ -16463,5 +16468,86 @@ a:hover {
 
 .color-circle-input {
   visibility: hidden;
+}
+
+.main-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.top-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.top-image {
+  margin: 5vh 0;
+  text-align: center;
+}
+
+.top-image img {
+  transform: translate(-4vw, 0);
+  width: 40%;
+}
+
+.top-title {
+  font-size: 1.6rem;
+  font-weight: normal;
+  text-align: center;
+  color: #888282;
+  margin-bottom: 5vh;
+}
+
+.top-button {
+  display: block;
+  border-radius: 20px;
+  box-shadow: 0 6px 10px #b3b3b3;
+  margin: 2vh auto;
+  border: none;
+  text-align: center;
+}
+
+.top-signup {
+  background-color: #fff;
+  width: 90%;
+  padding: 2vh 0;
+}
+
+.top-login {
+  background-color: #919191;
+  color: #fff;
+  width: 90%;
+  padding: 2vh 0;
+}
+
+.form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f8f8f8;
+}
+
+.submit-button {
+  display: block;
+  background-color: #919191;
+  color: #fff;
+  padding: 1vh 10vw;
+}
+
+.form-block {
+  width: 90%;
+}
+
+.form-button-block {
+  margin-top: 5vh;
+}
+
+.register-text {
+  font-size: 0.8rem;
+  color: #888282;
+  margin-bottom: 5vh;
 }
 
